--- a/pyplot.ipynb
+++ b/pyplot.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "## Matplotlib and pyplot\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Matthew Block\n",
+    "[P3 Assignment Repository](https://github.com/matthewpblock/pyplot)  \n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
